...
    text.length <= pattern.length &&
      text
        .filterIndexed { index, ch -> ch.isDigit() || (ch == delimiter && index in delimiterIndex) }
        .isNotEmpty()
}

const val DATE_TEXT_INPUT_FIELD = "date_picker_text_field"

